docs: Criando documentação de employees no Swagger
